--- a/package.json
+++ b/package.json
@@ -18,9 +18,10 @@
   },
   "homepage": "https://github.com/sshniro/testing#readme",
   "dependencies": {
+    "detect-secrets": "^1.0.6",
     "husky": "^4.3.8"
   },
   "hooks": {
-    "pre-commit": "echo 'commit event detected'"
+    "pre-commit": "detect-secrets-launcher *.js"
   }
 }
